<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="800dp" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="fung.dominic.mcacbulletin_v1.Help"
        android:id="@+id/RLayout3"
        android:theme="@style/AppTheme.Page">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Connection"
            android:id="@+id/connectionTitle"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />
        <View
            android:id="@+id/connectionDivider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/connectionTitle"
            android:background="@color/blue800" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/connectionText1"
            android:id="@+id/connectionText1"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/connectionDivider"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/wifiTag"
            android:id="@+id/wifiTag"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/connectionText1"
            android:layout_alignLeft="@+id/passwordTag"
            android:layout_alignStart="@+id/passwordTag"
            android:textColor="@color/blue900" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/passwordTag"
            android:id="@+id/passwordTag"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/wifiTag"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/blue900" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/textView5"
            android:id="@+id/wifiTempMsg"
            android:textColor="#00b11a"
            android:layout_alignTop="@+id/wifiTag"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/passwordTag"
            android:layout_toEndOf="@+id/passwordTag"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/wifiWarn"
            android:id="@+id/wifiWarn"
            android:layout_below="@+id/passwordTag"
            android:textColor="#ffff0000"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:textSize="10sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/connectionText2"
            android:text="@string/connectionText2"
            android:layout_below="@+id/wifiWarn"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/connectionText3"
            android:id="@+id/connectionText3"
            android:layout_below="@+id/connectionText2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Troubleshoot"
            android:id="@+id/troubleTitle"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/connectionText3" />

        <View
            android:id="@+id/troubleDivider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/troubleTitle"
            android:background="@color/blue800" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/troubleFaq1"
            android:id="@+id/troubleFaq1"
            android:layout_below="@+id/troubleDivider"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="22dp"
            android:textColor="@color/blue900"
            android:textStyle="italic" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/troubleAns1"
            android:id="@+id/troubleAns1"
            android:layout_below="@+id/troubleFaq1"
            android:layout_marginLeft="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/troubleFaq2"
            android:id="@+id/troubleFaq2"
            android:textColor="@color/blue900"
            android:textStyle="italic"
            android:layout_below="@+id/troubleAns1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/troubleAns2"
            android:id="@+id/troubleAns2"
            android:layout_below="@+id/troubleFaq2"
            android:layout_alignLeft="@+id/troubleAns1"
            android:layout_alignStart="@+id/troubleAns1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/troubleFaq3"
            android:id="@+id/troubleFaq3"
            android:textColor="@color/blue900"
            android:textStyle="italic"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/troubleAns2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/troubleAns3"
            android:id="@+id/troubleAns3"
            android:layout_below="@+id/troubleFaq3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/troubleAns1"
            android:layout_alignStart="@+id/troubleAns1" />

    </RelativeLayout>
</ScrollView>